--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+    />
     <title>Vite App</title>
   </head>
-  <body></body>
+  <body
+    class="w-[1248px] pb-48 pt-8 flex flex-col min-h-[110vh] gap-12 items-center mx-auto font-inter"
+  ></body>
   <script type="module" src="/src/main.ts"></script>
 </html>
