--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -15,7 +15,7 @@
     <title>Vite App</title>
   </head>
   <body
-    class="w-[1248px] pb-48 pt-8 flex flex-col min-h-[110vh] gap-12 items-center mx-auto font-inter"
+    class="max-w-[1280px] w-full pb-48 px-4 pt-8 flex flex-col gap-12 items-center mx-auto font-inter"
   ></body>
   <script type="module" src="/src/main.ts"></script>
 </html>
