--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Vite App</title>
   </head>
   <body
-    class="max-w-[1280px] pb-48 px-4 pt-8 flex text-neutral-600 flex-col gap-12 items-center mx-auto font-inter"
+    class="max-w-[1280px] min-h-[110vh] pb-48 px-4 pt-8 flex text-neutral-600 flex-col gap-12 items-center mx-auto font-inter"
   ></body>
   <script type="module" src="/src/main.ts"></script>
 </html>
