--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
     />
-    <title>Vite App</title>
+    <title>Rijks Gallery</title>
   </head>
   <body
     class="max-w-[1280px] min-h-[110vh] pt-24 lg:pt-8 bg-background pb-48 px-4 flex text-neutral-600 flex-col gap-12 items-center mx-auto font-inter"
